--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "redux-persist": "6.0.0",
     "redux-thunk": "2.3.0",
     "typescript": "3.7.5",
-    "nano": "8.1.0"
+    "nano": "8.1.0",
+    "decimal.js-light": "2.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
