--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app-map-db",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://BIDMCDigitalPsychiatry.github.io/AppMapDB",
   "dependencies": {
     "@material-ui/core": "4.9.1",
     "@material-ui/icons": "4.9.1",
@@ -42,7 +43,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
