--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "redux-thunk": "2.3.0",
     "typescript": "3.7.5",
     "nano": "8.1.0",
-    "decimal.js-light": "2.5.0"
+    "decimal.js-light": "2.5.0",
+    "axios": "0.19.2"
   },
   "devDependencies": {
-    "fs-extra": "8.0.1"
+    "fs-extra": "8.0.1"    
   },
   "scripts": {
     "start": "react-scripts start",
