--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-player": "1.15.2",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
+    "react-virtualized": "^9.21.2",
     "redux": "4.0.5",
     "react-scripts": "3.4.0",
     "redux-persist": "6.0.0",
