--- a/package.json
+++ b/package.json
@@ -4,45 +4,44 @@
   "private": true,
   "homepage": "https://BIDMCDigitalPsychiatry.github.io/AppMapDB",
   "dependencies": {
-    "@material-ui/core": "4.9.3",
+    "@material-ui/core": "4.9.7",
     "@material-ui/icons": "4.9.1",
-    "@material-ui/lab": "4.0.0-alpha.43",
+    "@material-ui/lab": "4.0.0-alpha.46",
     "@reactions/component": "2.0.2",
     "@rehooks/component-size": "1.0.3",
-    "@types/classnames": "2.2.9",
+    "@types/classnames": "2.2.10",
     "@types/history": "4.7.5",
     "@types/node": "12.12.14",
     "@types/react-redux": "7.1.7",
     "@types/react-router": "5.1.4",
     "@types/react-router-dom": "5.1.3",
-    "@types/webpack": "4.41.6",
+    "@types/webpack": "4.41.8",
     "@types/webpack-env": "1.15.1",
     "classnames": "2.2.6",
-    "connected-react-router": "6.7.0",
+    "connected-react-router": "6.8.0",
     "deepmerge": "4.2.2",
     "history": "4.10.1",
     "localforage": "1.7.3",
     "mui-virtualized-table": "3.0.0-6",
-    "react": "^16.12.0",
+    "react": "16.13.1",
     "react-container-dimensions": "1.4.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "16.13.1",
     "react-draggable": "4.2.0",
-    "react-number-format": "4.3.1",
-    "react-player": "1.15.2",
+    "react-number-format": "4.4.1",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
-    "react-virtualized": "^9.21.2",
+    "react-virtualized": "9.21.2",
     "redux": "4.0.5",
-    "react-scripts": "3.4.0",
+    "react-scripts": "3.4.1",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.3.0",
-    "typescript": "3.7.5",
+    "typescript": "3.8.3",
     "nano": "8.1.0",
     "decimal.js-light": "2.5.0",
     "axios": "0.19.2"
   },
   "devDependencies": {
-    "fs-extra": "8.0.1"
+    "fs-extra": "9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
