--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "2.2.6",
     "connected-react-router": "6.8.0",
     "deepmerge": "4.2.2",
+    "firebase": "7.13.1",
     "history": "4.10.1",
     "localforage": "1.7.3",
     "mui-virtualized-table": "3.0.0-6",
@@ -29,6 +30,7 @@
     "react-draggable": "4.2.0",
     "react-number-format": "4.4.1",
     "react-redux": "7.2.0",
+    "react-redux-firebase": "3.3.0",
     "react-router": "5.1.2",
     "react-virtualized": "9.21.2",
     "redux": "4.0.5",
