--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "app-map-db",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "private": true,
-  "homepage": "https://BIDMCDigitalPsychiatry.github.io/AppMapDB",
+  "homepage": "https://apps.digitalpsych.org",
   "dependencies": {
     "@material-ui/core": "4.9.7",
     "@material-ui/icons": "4.9.1",
