--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,5 +1,18 @@
 name: Production Build & Deploy
-on: [push]
+on:
+  # Trigger the workflow on push or pull request,
+  # but only for the master branch
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+  # Also trigger on page_build, as well as release created events
+  page_build:
+  release:
+    types: # This configuration does not affect the page_build event above
+      - created
 jobs:
   build:
     name: Build & Deploy
@@ -8,13 +21,17 @@ jobs:
       matrix:
         node-version: [12.x]
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and deploy
-      run: |
-        npm install
-        npm run build
-        npm run deploy
+      - uses: actions/checkout@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: npm install, build
+        run: |
+          npm install
+          npm run build          
+      - name: Deploy
+          uses: peaceiris/actions-gh-pages@v3
+          with:            
+            BRANCH: gh-pages
+            publish_dir: ./
