--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -34,4 +34,4 @@ jobs:
           uses: peaceiris/actions-gh-pages@v3
           with:            
             BRANCH: gh-pages
-            publish_dir: ./
+            publish_dir: .
