--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,24 +14,24 @@ on:
     types: # This configuration does not affect the page_build event above
       - created
 jobs:
-  build:
+  build-and-deploy:
     name: Build & Deploy
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [12.x]
-    steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: npm install, build
-        run: |
-          npm install
-          npm run build          
-      - name: Deploy
-          uses: peaceiris/actions-gh-pages@v3
-          with:            
-            BRANCH: gh-pages
-            publish_dir: .
+        steps:
+          - name: Checkout 🛎️
+            uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
+            with:
+            persist-credentials: false
+            - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+            run: |
+              npm install
+              npm run build
+          - name: Deploy 🚀
+            uses: JamesIves/github-pages-deploy-action@releases/v3
+            with:
+              ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+              BRANCH: gh-pages # The branch the action should deploy to.
+              FOLDER: build # The folder the action should deploy.
