--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -17,6 +17,7 @@ jobs:
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
-      with:                      
+      with:          
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}            
         BRANCH: gh-pages
         FOLDER: build
