--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "app-map-db",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": true,
   "homepage": "https://apps.digitalpsych.org",
   "dependencies": {
-    "@material-ui/core": "4.9.7",
+    "@material-ui/core": "4.9.8",
     "@material-ui/icons": "4.9.1",
-    "@material-ui/lab": "4.0.0-alpha.46",
+    "@material-ui/lab": "4.0.0-alpha.47",
     "@reactions/component": "2.0.2",
     "@rehooks/component-size": "1.0.3",
     "@types/classnames": "2.2.10",
     "@types/history": "4.7.5",
     "@types/node": "12.12.14",
     "@types/react-redux": "7.1.7",
-    "@types/react-router": "5.1.4",
+    "@types/react-router": "5.1.5",
     "@types/react-router-dom": "5.1.3",
-    "@types/webpack": "4.41.8",
+    "@types/webpack": "4.41.10",
     "@types/webpack-env": "1.15.1",
     "classnames": "2.2.6",
     "connected-react-router": "6.8.0",
     "deepmerge": "4.2.2",
-    "firebase": "7.13.1",
+    "firebase": "7.13.2",
     "history": "4.10.1",
     "localforage": "1.7.3",
     "mui-virtualized-table": "3.0.0-6",
@@ -39,7 +39,8 @@
     "redux-thunk": "2.3.0",
     "typescript": "3.8.3",
     "nano": "8.1.0",
-    "axios": "0.19.2"
+    "axios": "0.19.2",
+    "react-swipeable-views": "0.13.9"
   },
   "devDependencies": {
     "fs-extra": "9.0.0"
