--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "axios": "0.19.2",
     "react-swipeable-views": "0.13.9",
     "marked": "0.8.2",
-    "dompurify": "2.0.8"
+    "dompurify": "2.0.8",
+    "react-player": "1.15.3"
   },
   "devDependencies": {
     "fs-extra": "9.0.0"
