--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "5.1.5",
     "@types/webpack": "4.41.17",
     "@types/webpack-env": "1.15.2",
+    "aws-sdk": "2.696.0",
     "classnames": "2.2.6",
     "connected-react-router": "6.8.0",
     "deepmerge": "4.2.2",
