--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "app-map-db",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "private": true,
   "homepage": "https://apps.digitalpsych.org",
   "adminUsers": "team@digitalpsych.org,slagan@bidmc.harvard.edu,cvanem@gmail.com",
+  "emailUser": "chris@greenlinkservices.com",  
   "dependencies": {
     "@material-ui/core": "4.10.2",
     "@material-ui/icons": "4.9.1",
