[Auth] Migrate from Firebase -> AWS Amplify authentication

--- a/package.json
+++ b/package.json
@@ -19,34 +19,35 @@
     "@types/react-router-dom": "5.1.5",
     "@types/webpack": "4.41.17",
     "@types/webpack-env": "1.15.2",
+    "aws-amplify": "^3.0.20",
     "aws-sdk": "2.696.0",
+    "axios": "0.19.2",
     "classnames": "2.2.6",
     "connected-react-router": "6.8.0",
     "deepmerge": "4.2.2",
-    "firebase": "7.15.1",
+    "dompurify": "2.0.11",    
     "history": "4.10.1",
+    "jwt-decode": "^2.2.0",
     "localforage": "1.7.4",
+    "marked": "1.1.0",
     "mui-virtualized-table": "3.0.0-6",
+    "nano": "8.1.0",
     "react": "16.13.1",
     "react-container-dimensions": "1.4.1",
     "react-dom": "16.13.1",
     "react-draggable": "4.4.3",
     "react-number-format": "4.4.1",
+    "react-player": "2.3.1",
     "react-redux": "7.2.0",
-    "react-redux-firebase": "3.5.1",
     "react-router": "5.2.0",
+    "react-scripts": "3.4.1",
+    "react-swipeable-views": "0.13.9",
     "react-virtualized": "9.21.2",
     "redux": "4.0.5",
-    "react-scripts": "3.4.1",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.3.0",
     "typescript": "3.9.5",
-    "nano": "8.1.0",
-    "axios": "0.19.2",
-    "react-swipeable-views": "0.13.9",
-    "marked": "1.1.0",
-    "dompurify": "2.0.11",
-    "react-player": "2.3.1"
+    "password-validator": "5.0.3"
   },
   "devDependencies": {
     "fs-extra": "9.0.0"
