--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "app-map-db",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "private": true,
   "homepage": "https://apps.digitalpsych.org",
   "adminUsers": "team@digitalpsych.org,slagan@bidmc.harvard.edu,cvanem@gmail.com",
   "emailUser": "slagan@bidmc.harvard.edu",
+  "identityPoolId": "us-east-1:d6802415-4c63-433c-92f5-4a5c05756abe",
+  "region": "us-east-1",
   "dependencies": {
     "@material-ui/core": "4.10.2",
     "@material-ui/icons": "4.9.1",
@@ -30,8 +32,7 @@
     "jwt-decode": "^2.2.0",
     "localforage": "1.7.4",
     "marked": "1.1.0",
-    "mui-virtualized-table": "3.0.0-6",
-    "nano": "8.1.0",
+    "mui-virtualized-table": "3.0.0-6",    
     "react": "16.13.1",
     "react-container-dimensions": "1.4.1",
     "react-dom": "16.13.1",
