[Footer] Create v2 component and integrate with layout

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://apps.digitalpsych.org",
   "adminUsers": "team@digitalpsych.org,slagan@bidmc.harvard.edu,cvanem@gmail.com",
   "emailUser": "slagan@bidmc.harvard.edu",
+  "contactEmail": "team@digitalpsych.org",
   "identityPoolId": "us-east-1:d6802415-4c63-433c-92f5-4a5c05756abe",
   "region": "us-east-1",
   "dependencies": {
@@ -27,12 +28,12 @@
     "classnames": "2.2.6",
     "connected-react-router": "6.8.0",
     "deepmerge": "4.2.2",
-    "dompurify": "2.0.11",    
+    "dompurify": "2.0.11",
     "history": "4.10.1",
     "jwt-decode": "^2.2.0",
     "localforage": "1.7.4",
     "marked": "1.1.0",
-    "mui-virtualized-table": "3.0.0-6",    
+    "mui-virtualized-table": "3.0.0-6",
     "react": "16.13.1",
     "react-container-dimensions": "1.4.1",
     "react-dom": "16.13.1",
