--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "redux-persist": "6.0.0",
     "redux-thunk": "2.3.0",
     "typescript": "3.9.5",
-    "password-validator": "5.0.3"
+    "password-validator": "5.0.3",
+    "clsx": "1.1.1"
   },
   "devDependencies": {
     "fs-extra": "9.0.0"
