--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-map-db",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "private": true,
   "homepage": "https://apps.digitalpsych.org",
   "adminUsers": "team@digitalpsych.org,slagan@bidmc.harvard.edu,cvanem@gmail.com",
@@ -50,7 +50,9 @@
     "redux-thunk": "2.3.0",
     "typescript": "3.9.5",
     "password-validator": "5.0.3",
-    "clsx": "1.1.1"
+    "clsx": "1.1.1",
+    "react-elastic-carousel": "0.11.0",
+    "styled-components": "5.2.1"
   },
   "devDependencies": {
     "fs-extra": "9.0.0"
