--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "decimal.js-light": "2.5.1"
   },
   "devDependencies": {
-    "fs-extra": "9.0.0"
+    "fs-extra": "9.0.0",
+    "webpack": "^4.44.2"
   },
   "scripts": {
     "start": "react-scripts start",
