--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "@fullcalendar/list": "^4.4.2",
     "@fullcalendar/react": "^4.4.2",
     "@fullcalendar/timegrid": "^4.4.2",
-    "@fullcalendar/timeline": "^4.4.2"
+    "@fullcalendar/timeline": "^4.4.2",
+    "moment": "2.29.1"
   },
   "devDependencies": {
     "fs-extra": "9.0.0",
