--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-map-db",
-  "version": "1.2.10",
+  "version": "1.2.11",
   "private": true,
   "homepage": "https://mindapps.org",
   "adminUsers": "team@digitalpsych.org,slagan@bidmc.harvard.edu,cvanem@gmail.com,jmelcher@bidmc.harvard.edu,tlakhtak@bidmc.harvard.edu,ecamach1@bidmc.harvard.edu",
@@ -71,7 +71,8 @@
     "@fullcalendar/react": "^4.4.2",
     "@fullcalendar/timegrid": "^4.4.2",
     "@fullcalendar/timeline": "^4.4.2",
-    "moment": "2.29.1"
+    "moment": "2.29.1",
+    "react-avatar-editor": "11.1.0"
   },
   "devDependencies": {
     "fs-extra": "9.0.0",
