--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "app-map-db",
-  "version": "1.4.7",
+  "version": "1.4.8",
   "private": true,
   "homepage": "https://mindapps.org",
+  "enableLogRocket": true,
   "adminUsers": "team@digitalpsych.org,slagan@bidmc.harvard.edu,cvanem@gmail.com,jmelcher@bidmc.harvard.edu,tlakhtak@bidmc.harvard.edu,ecamach1@bidmc.harvard.edu",
   "emailUser": "jmelcher@bidmc.harvard.edu",
   "contactEmail": "team@digitalpsych.org",
@@ -73,7 +74,8 @@
     "@fullcalendar/timegrid": "^4.4.2",
     "@fullcalendar/timeline": "^4.4.2",
     "moment": "2.29.1",
-    "react-avatar-editor": "11.1.0"
+    "react-avatar-editor": "11.1.0",
+    "logrocket": "2.1.3"
   },
   "devDependencies": {
     "fs-extra": "9.0.0",
