--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-map-db",
-  "version": "1.4.9",
+  "version": "1.5.0",
   "private": true,
   "homepage": "https://mindapps.org",
   "enableLogRocket": true,
@@ -12,17 +12,28 @@
   "keyWords": "mental health apps, therapy app, depression apps, free apps, anxiety apps, stress apps, psych app, psychiatry apps",
   "region": "us-east-1",
   "dependencies": {
+    "@date-io/date-fns": "1.3.13",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fullcalendar/core": "^4.4.2",
+    "@fullcalendar/daygrid": "^4.4.2",
+    "@fullcalendar/interaction": "^4.4.2",
+    "@fullcalendar/list": "^4.4.2",
+    "@fullcalendar/react": "^4.4.2",
+    "@fullcalendar/timegrid": "^4.4.2",
+    "@fullcalendar/timeline": "^4.4.2",
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.58",
+    "@material-ui/pickers": "3.2.10",
     "@reactions/component": "2.0.2",
     "@rehooks/component-size": "1.0.3",
     "@types/classnames": "2.2.10",
     "@types/history": "4.7.5",
     "@types/node": "12.12.14",
-    "@types/react-redux": "7.1.16",
-    "@types/react-router": "5.1.14",
-    "@types/react-router-dom": "5.1.7",
+    "@types/react-redux": "7.1.22",
+    "@types/react-router": "5.1.18",
+    "@types/react-router-dom": "5.3.3",
     "@types/webpack": "5.28.0",
     "@types/webpack-env": "1.16.0",
     "aws-amplify": "^3.0.20",
@@ -31,51 +42,43 @@
     "classnames": "2.2.6",
     "clsx": "1.1.1",
     "connected-react-router": "6.9.1",
+    "date-fns": "2.21.3",
     "decimal.js-light": "2.5.1",
     "deepmerge": "4.2.2",
     "dompurify": "2.2.8",
     "history": "4.10.1",
     "jwt-decode": "^2.2.0",
     "localforage": "1.9.0",
+    "logrocket": "2.1.3",
     "marked": "2.0.6",
+    "moment": "2.29.1",
     "mui-virtualized-table": "3.0.0-6",
     "password-validator": "5.1.1",
     "react": "17.0.2",
+    "react-avatar-editor": "11.1.0",
     "react-container-dimensions": "1.4.1",
     "react-dom": "17.0.2",
     "react-draggable": "4.4.3",
+    "react-dropzone": "^11.2.4",
     "react-elastic-carousel": "0.11.5",
+    "react-feather": "^2.0.8",
+    "react-markdown": "^4.3.1",
     "react-number-format": "4.6.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-player": "2.9.0",
+    "react-quill": "1.3.5",
     "react-redux": "7.2.4",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-swipeable-views": "0.13.9",
     "react-virtualized": "9.21.2",
+    "react-virtuoso": "2.5.1",
     "redux": "4.1.0",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.3.0",
     "styled-components": "5.2.1",
-    "typescript": "4.2.4",
-    "date-fns": "2.21.3",
-    "react-dropzone": "^11.2.4",
-    "react-feather": "^2.0.8",
-    "react-markdown": "^4.3.1",
-    "react-perfect-scrollbar": "^1.5.8",
-    "react-quill": "1.3.5",
-    "@date-io/date-fns": "1.3.13",
-    "@material-ui/pickers": "3.2.10",
-    "@fullcalendar/core": "^4.4.2",
-    "@fullcalendar/daygrid": "^4.4.2",
-    "@fullcalendar/interaction": "^4.4.2",
-    "@fullcalendar/list": "^4.4.2",
-    "@fullcalendar/react": "^4.4.2",
-    "@fullcalendar/timegrid": "^4.4.2",
-    "@fullcalendar/timeline": "^4.4.2",
-    "moment": "2.29.1",
-    "react-avatar-editor": "11.1.0",
-    "logrocket": "2.1.3"
+    "typescript": "4.5.5"
   },
   "devDependencies": {
     "fs-extra": "9.0.0",
