--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -15,7 +15,8 @@ jobs:
         npm install --force
         npm install yarn -g --force
         yarn build
-
+      env:
+        CI: false
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
@@ -23,3 +24,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}            
         BRANCH: gh-pages
         FOLDER: build
+        
