--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "keyWords": "mental health apps, therapy app, depression apps, free apps, anxiety apps, stress apps, psych app, psychiatry apps",
   "region": "us-east-1",
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@fullcalendar/core": "^4.4.2",
-    "@fullcalendar/daygrid": "^4.4.2",
-    "@fullcalendar/interaction": "^4.4.2",
-    "@fullcalendar/list": "^4.4.2",
-    "@fullcalendar/react": "^4.4.2",
-    "@fullcalendar/timegrid": "^4.4.2",
-    "@fullcalendar/timeline": "^4.4.2",
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
+    "@fullcalendar/core": "4.4.2",
+    "@fullcalendar/daygrid": "4.4.2",
+    "@fullcalendar/interaction": "4.4.2",
+    "@fullcalendar/list": "4.4.2",
+    "@fullcalendar/react": "4.4.2",
+    "@fullcalendar/timegrid": "4.4.2",
+    "@fullcalendar/timeline": "4.4.2",
     "@mui/material": "5.4.1",
     "@mui/lab": "5.0.0-alpha.68",
     "@mui/styles": "5.4.1",
@@ -35,7 +35,7 @@
     "@types/react-router-dom": "5.3.3",
     "@types/webpack": "5.28.0",
     "@types/webpack-env": "1.16.3",
-    "aws-amplify": "^3.0.20",
+    "aws-amplify": "3.0.20",
     "aws-sdk": "2.696.0",
     "axios": "0.19.2",
     "classnames": "2.3.1",
@@ -55,7 +55,7 @@
     "react-avatar-editor": "11.1.0",
     "react-dom": "17.0.2",
     "react-draggable": "4.4.4",
-    "react-dropzone": "^11.2.4",
+    "react-dropzone": "11.2.4",
     "react-elastic-carousel": "0.11.5",
     "react-number-format": "4.6.0",
     "react-player": "2.9.0",
