--- a/cloud_functions/app-store-cors-proxy-aws/package.json
+++ b/cloud_functions/app-store-cors-proxy-aws/package.json
@@ -2,7 +2,7 @@
   "name": "app-store-cors-proxy",
   "version": "1.0.1",
   "dependencies": {
-    "google-play-scraper": "8.1.0",
+    "google-play-scraper": "git+https://github.com/facundoolano/google-play-scraper#pull/545/head",
     "app-store-scraper": "0.17.0"
   }
 }
