--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "enableLogRocket": true,
   "enableTour": true,
   "adminUsers": "msingh10@bidmc.harvard.edu,sperret@bu.edu,nalon@bidmc.Harvard.edu,team@digitalpsych.org,slagan@bidmc.harvard.edu,cvanem@gmail.com,jmelcher@bidmc.harvard.edu,tlakhtak@bidmc.harvard.edu,ecamach1@bidmc.harvard.edu,chaudharypooja209@gmail.com",
-  "emailUsers": "nalon@bidmc.harvad.edu,sperret@bidmc.harvard.edu,chris@greenlinkservices.com",
+  "emailUsers": "nalon@bidmc.harvad.edu,sperret@bidmc.harvard.edu",
   "contactEmail": "team@digitalpsych.org",
   "surveyNotificationEmail": "ecamach1@bidmc.harvard.edu",
   "identityPoolId": "us-east-1:d6802415-4c63-433c-92f5-4a5c05756abe",
