--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://mindapps.org",
   "enableLogRocket": true,
   "enableTour": true,
-  "adminUsers": "msingh10@bidmc.harvard.edu,sperret@bu.edu,nalon@bidmc.Harvard.edu,team@digitalpsych.org,slagan@bidmc.harvard.edu,cvanem@gmail.com,jmelcher@bidmc.harvard.edu,tlakhtak@bidmc.harvard.edu,ecamach1@bidmc.harvard.edu,chaudharypooja209@gmail.com",
+  "adminUsers": "malteschmieding@hms.harvard.edu,msingh10@bidmc.harvard.edu,sperret@bu.edu,nalon@bidmc.Harvard.edu,team@digitalpsych.org,slagan@bidmc.harvard.edu,cvanem@gmail.com,jmelcher@bidmc.harvard.edu,tlakhtak@bidmc.harvard.edu,ecamach1@bidmc.harvard.edu,chaudharypooja209@gmail.com",
   "emailUsers": "nalon@bidmc.harvad.edu,sperret@bidmc.harvard.edu",
   "contactEmail": "team@digitalpsych.org",
   "surveyNotificationEmail": "ecamach1@bidmc.harvard.edu",
