--- a/package.json
+++ b/package.json
@@ -13,19 +13,13 @@
   "keyWords": "mental health apps, therapy app, depression apps, free apps, anxiety apps, stress apps, psych app, psychiatry apps",
   "region": "us-east-1",
   "dependencies": {
-    "@emotion/react": "11.7.1",
-    "@emotion/styled": "11.6.0",
-    "@fullcalendar/core": "4.4.2",
-    "@fullcalendar/daygrid": "4.4.2",
-    "@fullcalendar/interaction": "4.4.2",
-    "@fullcalendar/list": "4.4.2",
-    "@fullcalendar/react": "4.4.2",
-    "@fullcalendar/timegrid": "4.4.2",
-    "@fullcalendar/timeline": "4.4.2",
-    "@mui/material": "5.4.1",
-    "@mui/lab": "5.0.0-alpha.68",
-    "@mui/styles": "5.4.1",
-    "@mui/icons-material": "5.4.1",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
+    "@mui/material": "5.11.0",
+    "@mui/lab": "5.0.0-alpha.112",
+    "@mui/styles": "5.11.0",
+    "@mui/icons-material": "5.11.0",
+    "@mui/x-date-pickers": "5.0.10",
     "@reactions/component": "2.0.2",
     "@rehooks/component-size": "1.0.3",
     "@types/history": "4.7.5",
