--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "typescript": "4.5.5"
   },
   "devDependencies": {
+    "google-play-scraper": "9.1.1",
+    "app-store-scraper": "0.17.0",
     "fs-extra": "9.0.0",
     "webpack": "^4.44.2"
   },
