Remove BIDMC branding

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "AppMap",
-  "name": "BIDMC - Division of Digital Psychiatry",
+  "short_name": "MindApp",
+  "name": "MindAppDB",
   "icons": [
     {
       "src": "logo.png",
