Update admin users

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://mindapps.org",
   "enableLogRocket": true,
   "enableTour": true,
-  "adminUsers": "janeangellmikkelson@gmail.com,quachi1@mcmaster.ca,youthengagement@kidshelpphone.ca,aegbe@bu.edu,eperlmut@bidmc.harvard.edu,kchen10@bidmc.harvard.edu,nram2@bidmc.harvard.edu,bdwyer@bidmc.harvard.edu,malteschmieding@hms.harvard.edu,msingh10@bidmc.harvard.edu,sperret@bu.edu,nalon@bidmc.Harvard.edu,team@digitalpsych.org,slagan@bidmc.harvard.edu,cvanem@gmail.com,jmelcher@bidmc.harvard.edu,tlakhtak@bidmc.harvard.edu,ecamach1@bidmc.harvard.edu,chaudharypooja209@gmail.com,ewagner@hsph.harvard.edu,valeriadiaz097@gmail.com",
+  "adminUsers": "janeangellmikkelson@gmail.com,quachi1@mcmaster.ca,youthengagement@kidshelpphone.ca,aegbe@bu.edu,eperlmut@bidmc.harvard.edu,kchen10@bidmc.harvard.edu,nram2@bidmc.harvard.edu,bdwyer@bidmc.harvard.edu,malteschmieding@hms.harvard.edu,msingh10@bidmc.harvard.edu,sperret@bu.edu,nalon@bidmc.Harvard.edu,team@digitalpsych.org,slagan@bidmc.harvard.edu,cvanem@gmail.com,jmelcher@bidmc.harvard.edu,tlakhtak@bidmc.harvard.edu,ecamach1@bidmc.harvard.edu,chaudharypooja209@gmail.com,ewagner@hsph.harvard.edu,valeriadiaz097@gmail.com,Shreya.Sharma@kidshelpphone.ca",
   "testUsers": "cvanem@gmail.com,bdwyer@bidmc.harvard.edu",
   "emailUsers": "bdwyer@bidmc.harvard.edu,nalon@bidmc.harvad.edu,sperret@bidmc.harvard.edu",
   "contactEmail": "team@digitalpsych.org",
