--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-map-db",
-  "version": "2.1.31",
+  "version": "2.1.32",
   "private": true,
   "homepage": "https://mindapps.org",
   "enableLogRocket": true,
@@ -66,7 +66,8 @@
     "redux-persist": "6.0.0",
     "redux-thunk": "2.4.1",
     "styled-components": "5.3.3",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "fuzzysort": "3.1.0"
   },
   "devDependencies": {
     "google-play-scraper": "9.1.1",
